--- a/www.pbssoft.com/www.pbssoft.com/data-structures-algorithms-online-training.html
+++ b/www.pbssoft.com/www.pbssoft.com/data-structures-algorithms-online-training.html
@@ -1133,7 +1133,8 @@ li><a href="https://www.pbssoft.com/courses-offering" target="_blank"> Courses O
                                       <li><a href="unittest.html" target="_blank">Unit Testing</a></li>
                                       <li><a href="integrated-dev.html" target="_blank">IDE Tools</a></li>
                                       <li><a href="version.html" target="_blank" >Version Controll Systems</a></li>
-                                      <li><a href="logging.html" target="_blank">Logging Frameworks</a></li>
+                                       <li><a href="logging.html" target="_blank">Logging Frameworks</a></li>
+                            <li><a href="code.html" target="_blank">Code Coverage</a></li>
                                   </ul>
                               </li>
                                 <li>
