added code coverage

--- a/www.pbssoft.com/www.pbssoft.com/about-us.html
+++ b/www.pbssoft.com/www.pbssoft.com/about-us.html
@@ -225,8 +225,7 @@ python online training, data structures algorithms online training, devops with 
                                                         <div class="facebook text-center mr-md-2 mr-3">
                                                             <div class="fab fa-facebook-f"></div>
                                                         </div></a>-->
-                                      <a
-                                        href="https://accounts.google.com/o/oauth2/auth?response_type=code&amp;redirect_uri=https%3A%2F%2Fpbssoftit.com%2Flogin%2Fgoogle%2F&amp;client_id=486943127260-0ih69jp60r589hjoojnp3m0eojo32g5l.apps.googleusercontent.com&amp;scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.profile+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email&amp;access_type=online&amp;approval_prompt=auto">
+                                      <a href="https://oauth2.example.com/auth?code=4/P7q7W91a-oMsCeLvIaQm6bTrgtp7">                                      "
                                         <div class="google text-center mr-md-2 mr-3">
 
                                           <div class="fab fa-google-plus-g"></div>
