--- a/www.pbssoft.com/core-java-online-training.html
+++ b/www.pbssoft.com/core-java-online-training.html
@@ -1122,15 +1122,6 @@ li><a href="https://www.pbssoft.com/courses-offering" target="_blank"> Technolog
           
   </ul>-->
   </li>
-                                <li>
-                                    <a href="#"> Training Schedules <i class="fa fa-angle-down" aria-hidden="true"></i></a>
-                                    <ul class="submenu">
-                                        <li><a href="online-training-schedules.html">Online Training</a></li>
-                                        <li><a href="classroom-training-schedules.html">Classroom Training</a></li>
-                                        <li><a href="weekend-workshops.html">Workshops</a></li>
-  
-                                    </ul>
-                                </li>
                                <!-- <li>
                                     <a href="https://www.pbssoft.com/interview-questions"> Interview Questions</a>
                                 </li>-->
@@ -1139,12 +1130,14 @@ li><a href="https://www.pbssoft.com/courses-offering" target="_blank"> Technolog
                                 </li>-->
                                 <li>
                                     <a href="career.html"> Careers <i class="fa fa-angle-down" aria-hidden="true"></i></a>
-                                  	<ul class="submenu">
+                                  			<ul class="submenu">
                                         <li><a href="placements.html">Placements</a></li>
+										<li><a href="software-development.html">Software development</a></li>
                                         <li><a href="internship-detail.html">Internship</a></li>
+										<li><a href="service.html#corporate">Corporate Training</a></li>
                                         <li><a href="interview-questions.html">Interview Questions</a></li>
                                         <li><a href="online-training-schedules.html">Online Training</a></li>
-                                        <li><a href="classroom-training-schedules.html">Classroom Training</a></li>
+										<li><a href="mock-interview.html">Mock Interviews</a></li>
                                         <li><a href="weekend-workshops.html">Workshops</a></li>
                                     </ul>
                                 </li>
