--- a/www.pbssoft.com/testimonials.html
+++ b/www.pbssoft.com/testimonials.html
@@ -15,7 +15,7 @@ testimonials by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:25:02 GMT -->
     <link rel="stylesheet" href="css/fontawsome.min.css"/>
     <link href="css/animate.css" rel="stylesheet"/>
     <script src="../unpkg.com/%40lottiefiles/lottie-player%402.0.4/dist/lottie-player.js"></script>
-    <title>Akira Software Solutions</title>
+    <title>Pbssoft IT Solutions</title>
 
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
 
@@ -60,7 +60,7 @@ testimonials by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:25:02 GMT -->
                         <li><a href="construction.html">Construction</a></li>
                         <li><a href="servicesector.html">Service sector</a></li>
                         <li><a href="nonprofit.html">Non-profits</a></li>
-                        <li><a href="healthcare.html">Healthcare</a></li>
+                        <li></li>
                     </ul>
                   </li>
 
@@ -193,7 +193,7 @@ testimonials by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:25:02 GMT -->
                         <li><a href="construction.html">Construction</a></li>
                         <li><a href="servicesector.html">Service sector</a></li>
                         <li><a href="nonprofit.html">Non-profits</a></li>
-                        <li><a href="healthcare.html">Healthcare</a></li>
+                        <li></li>
 
 
 
@@ -374,7 +374,7 @@ testimonials by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:25:02 GMT -->
             <div class="testi_fullwrap wow bounceInUp mb-3" data-wow-duration="3s">
                 <div class="chat-box msg">
                     <div class="text_wrap">
-                     <p>"We have been using the Smart School Pro developed by Akira Software Solutions Pvt. Ltd, India,
+                     <p>"We have been using the Smart School Pro developed by Pbssoft IT Solutions Pvt. Ltd, India,
                      for more than a year. This is a very useful platform where students, teachers and parents are able
                      to interact and all student information, progress and evaluation is available on the application.
                      The ERP application automates all administration activities making all information available at the
@@ -407,7 +407,7 @@ testimonials by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:25:02 GMT -->
                 <div class="chat-box msg">
                     <div class="text_wrap">
                      <p>" SMART SCHOOL is extremely client focused School Management Software. Highly responsible team with profound understanding of our requirements.
-                     It is certified that the assignment work given by this management to Akira Software Solutions Pvt. Ltd., Trivandrum has been completed successfully. We are enormously satisfied with Akira’s team work and quality."</p>
+                     It is certified that the assignment work given by this management to Pbssoft IT Solutions Pvt. Ltd., Trivandrum has been completed successfully. We are enormously satisfied with Akira’s team work and quality."</p>
                     </div>
                  </div>
                  <div style="clear:both;"></div>
@@ -536,7 +536,7 @@ testimonials by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:25:02 GMT -->
      <div class="btm">
      <div class="row align-items-center">
            <div class="col-12 col-md-9" >
-             <p style="font-size: 12px !important;"><span class="footer-logo mob-off"></span>Copyright © 2022 Akira Software Solutions. | <a href="privacy_policy.html">Privacy Policy</a></p>
+             <p style="font-size: 12px !important;"><span class="footer-logo mob-off"></span>Copyright © 2022 Pbssoft IT Solutions. | <a href="privacy_policy.html">Privacy Policy</a></p>
            </div>
            <div class="col-12 col-md-3 media-link" >
              <a href="https://www.facebook.com/smartschoolerp/"><i class="fab fa-facebook-f"></i></a>
