--- a/www.pbssoft.com/two_d_anime.html
+++ b/www.pbssoft.com/two_d_anime.html
@@ -14,7 +14,7 @@ two_d_anime by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:24:42 GMT -->
     <link rel="stylesheet" href="css/fontawsome.min.css"/>
     <link href="css/animate.css" rel="stylesheet"/>
     <script src="../unpkg.com/%40lottiefiles/lottie-player%402.0.4/dist/lottie-player.js"></script>
-    <title>Akira Software Solutions</title>
+    <title>Pbssoft IT Solutions</title>
 
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
 
@@ -59,7 +59,7 @@ two_d_anime by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:24:42 GMT -->
                         <li><a href="construction.html">Construction</a></li>
                         <li><a href="servicesector.html">Service sector</a></li>
                         <li><a href="nonprofit.html">Non-profits</a></li>
-                        <li><a href="healthcare.html">Healthcare</a></li>
+                        <li></li>
                     </ul>
                   </li>
 
@@ -535,7 +535,7 @@ two_d_anime by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:24:42 GMT -->
      <div class="btm">
      <div class="row align-items-center">
            <div class="col-12 col-md-9" >
-             <p style="font-size: 12px !important;"><span class="footer-logo mob-off"></span>Copyright © 2022 Akira Software Solutions. | <a href="privacy_policy.html">Privacy Policy</a></p>
+             <p style="font-size: 12px !important;"><span class="footer-logo mob-off"></span>Copyright © 2022 Pbssoft IT Solutions. | <a href="privacy_policy.html">Privacy Policy</a></p>
            </div>
            <div class="col-12 col-md-3 media-link" >
              <a href="https://www.facebook.com/smartschoolerp/"><i class="fab fa-facebook-f"></i></a>
