--- a/www.pbssoft.com/web.html
+++ b/www.pbssoft.com/web.html
@@ -15,7 +15,7 @@ web by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:23:55 GMT -->
     <link rel="stylesheet" href="css/fontawsome.min.css"/>
     <link href="css/animate.css" rel="stylesheet"/>
     <script src="../unpkg.com/%40lottiefiles/lottie-player%402.0.4/dist/lottie-player.js"></script>
-    <title>Akira Software Solutions</title>
+    <title>Pbssoft IT Solutions</title>
 
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
 
@@ -462,7 +462,7 @@ web by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:23:55 GMT -->
             <div class="row justify-content-center">
                 <div class="col-12 col-md-8 tc">
                    <h4 class="main_head" style="text-align:center; margin-top:30px; margin-bottom:10px !important;">Enhance your brand’s reputation</h4>
-                   <p style="text-align:center !important;">Akira Software Solutions ranks top web development company with a dedicated team of experts developing fully functioning, scalable, and resilient online applications. We develop bespoke web applications aligned with your company goals and assist you in achieving optimum growth. As a final result, we want to provide you with high-quality web applications that are resource-efficient and economically feasible.</p>
+                   <p style="text-align:center !important;">Pbssoft IT Solutions ranks top web development company with a dedicated team of experts developing fully functioning, scalable, and resilient online applications. We develop bespoke web applications aligned with your company goals and assist you in achieving optimum growth. As a final result, we want to provide you with high-quality web applications that are resource-efficient and economically feasible.</p>
                 </div>
             </div>
         </div>
@@ -537,7 +537,7 @@ web by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:23:55 GMT -->
      <div class="btm">
      <div class="row align-items-center">
            <div class="col-12 col-md-9" >
-             <p style="font-size: 12px !important;"><span class="footer-logo mob-off"></span>Copyright © 2022 Akira Software Solutions. | <a href="privacy_policy.html">Privacy Policy</a></p>
+             <p style="font-size: 12px !important;"><span class="footer-logo mob-off"></span>Copyright © 2022 Pbssoft IT Solutions. | <a href="privacy_policy.html">Privacy Policy</a></p>
            </div>
            <div class="col-12 col-md-3 media-link" >
              <a href="https://www.facebook.com/smartschoolerp/"><i class="fab fa-facebook-f"></i></a>
