--- a/www.pbssoft.com/webapp.html
+++ b/www.pbssoft.com/webapp.html
@@ -14,7 +14,7 @@ webapp by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:24:12 GMT -->
     <link rel="stylesheet" href="css/fontawsome.min.css"/>
     <link href="css/animate.css" rel="stylesheet"/>
     <script src="../unpkg.com/%40lottiefiles/lottie-player%402.0.4/dist/lottie-player.js"></script>
-    <title>Akira Software Solutions</title>
+    <title>Pbssoft IT Solutions</title>
 
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
 
@@ -313,7 +313,7 @@ webapp by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:24:12 GMT -->
         <div class="row align-items-center">
             <div class="col-12 col-md-7">
                 <h2>Accelerate your digital transformation with our web app development services </h2>
-                <p>Akira Software Solutions is a web development company that concentrates on developing fully functioning, scalable, and resilient online applications. We develop bespoke web applications aligned with your company goals and assist you in achieving
+                <p>Pbssoft IT Solutions is a web development company that concentrates on developing fully functioning, scalable, and resilient online applications. We develop bespoke web applications aligned with your company goals and assist you in achieving
                     optimum growth. As a result, we want to provide our clients with high-quality web applications that are resource-efficient and economically feasible. Our web application development services encompass the design and development of the application and its testing, support, and maintenance. Our skilled web application developers assist you with technical advice, modernization
                     of old architectures, and migration to new web architecture.
                 </p>
@@ -380,7 +380,7 @@ webapp by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:24:12 GMT -->
      <div class="btm">
      <div class="row align-items-center">
            <div class="col-12 col-md-9" >
-             <p style="font-size: 12px !important;"><span class="footer-logo mob-off"></span>Copyright © 2022 Akira Software Solutions. | <a href="privacy_policy.html">Privacy Policy</a></p>
+             <p style="font-size: 12px !important;"><span class="footer-logo mob-off"></span>Copyright © 2022 Pbssoft IT Solutions. | <a href="privacy_policy.html">Privacy Policy</a></p>
            </div>
            <div class="col-12 col-md-3 media-link" >
              <a href="https://www.facebook.com/smartschoolerp/"><i class="fab fa-facebook-f"></i></a>
