--- a/www.pbssoft.com/smm.html
+++ b/www.pbssoft.com/smm.html
@@ -14,7 +14,7 @@ smm by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:23:52 GMT -->
     <link rel="stylesheet" href="css/fontawsome.min.css"/>
     <link href="css/animate.css" rel="stylesheet"/>
     <script src="../unpkg.com/%40lottiefiles/lottie-player%402.0.4/dist/lottie-player.js"></script>
-    <title>Akira Software Solutions</title>
+    <title>Pbssoft IT Solutions</title>
 
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
 
@@ -59,7 +59,7 @@ smm by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:23:52 GMT -->
                         <li><a href="construction.html">Construction</a></li>
                         <li><a href="servicesector.html">Service sector</a></li>
                         <li><a href="nonprofit.html">Non-profits</a></li>
-                        <li><a href="healthcare.html">Healthcare</a></li>
+                        <li></li>
                     </ul>
                   </li>
 
@@ -192,7 +192,7 @@ smm by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:23:52 GMT -->
                         <li><a href="construction.html">Construction</a></li>
                         <li><a href="servicesector.html">Service sector</a></li>
                         <li><a href="nonprofit.html">Non-profits</a></li>
-                        <li><a href="healthcare.html">Healthcare</a></li>
+                        <li></li>
 
 
 
@@ -313,7 +313,7 @@ smm by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:23:52 GMT -->
         <div class="row align-items-center">
             <div class="col-12 col-md-6">
                 <h2>Social Media Profiles For Businesses</h2>
-                <p>Let us showcase your business to the world. All you need is the right tool to reach the current customers and find the new ones. At Akira Software Solutions, we have got all that you desires… We are a creative team with professional strategies hereby branding your business through social media channel.</p>
+                <p>Let us showcase your business to the world. All you need is the right tool to reach the current customers and find the new ones. At Pbssoft IT Solutions, we have got all that you desires… We are a creative team with professional strategies hereby branding your business through social media channel.</p>
             </div>
             <div class="col-12 col-md-6">
                 <div class="grap_img_wrap">
@@ -403,7 +403,7 @@ smm by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:23:52 GMT -->
      <div class="btm">
      <div class="row align-items-center">
            <div class="col-12 col-md-9" >
-             <p style="font-size: 12px !important;"><span class="footer-logo mob-off"></span>Copyright © 2022 Akira Software Solutions. | <a href="privacy_policy.html">Privacy Policy</a></p>
+             <p style="font-size: 12px !important;"><span class="footer-logo mob-off"></span>Copyright © 2022 Pbssoft IT Solutions. | <a href="privacy_policy.html">Privacy Policy</a></p>
            </div>
            <div class="col-12 col-md-3 media-link" >
              <a href="https://www.facebook.com/smartschoolerp/"><i class="fab fa-facebook-f"></i></a>
