--- a/www.pbssoft.com/websites.html
+++ b/www.pbssoft.com/websites.html
@@ -14,7 +14,7 @@ websites by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:24:11 GMT -->
     <link rel="stylesheet" href="css/fontawsome.min.css"/>
     <link href="css/animate.css" rel="stylesheet"/>
     <script src="../unpkg.com/%40lottiefiles/lottie-player%402.0.4/dist/lottie-player.js"></script>
-    <title>Akira Software Solutions</title>
+    <title>Pbssoft IT Solutions</title>
 
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
 
@@ -375,7 +375,7 @@ websites by/3.x [XR&CO'2014], Tue, 26 Mar 2024 22:24:11 GMT -->
      <div class="btm">
      <div class="row align-items-center">
            <div class="col-12 col-md-9" >
-             <p style="font-size: 12px !important;"><span class="footer-logo mob-off"></span>Copyright © 2022 Akira Software Solutions. | <a href="privacy_policy.html">Privacy Policy</a></p>
+             <p style="font-size: 12px !important;"><span class="footer-logo mob-off"></span>Copyright © 2022 Pbssoft IT Solutions. | <a href="privacy_policy.html">Privacy Policy</a></p>
            </div>
            <div class="col-12 col-md-3 media-link" >
              <a href="https://www.facebook.com/smartschoolerp/"><i class="fab fa-facebook-f"></i></a>
